unpackaged/main/default/objects/Trigger_Settings__c/Trigger_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Switch Activate/ Deactivate trigger execution for different objects</description>
    <label>Trigger Settings</label>
</CustomObject>