unpackaged/main/default/objects/Trigger_Settings__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Activate/Deactivate Account trigger logic (excluding managed package triggers)</description>
    <label>Account</label>
    <type>Checkbox</type>
</CustomField>