unpackaged/main/default/objects/Trigger_Settings__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Activate/Deactivate Contact trigger logic (excluding managed package triggers)</description>
    <label>Contact</label>
    <type>Checkbox</type>
</CustomField>