unpackaged/main/default/objects/Trigger_Settings__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Switch Activate/ Deactivate trigger execution for different objects</description>
    <label>Item</label>
    <type>Checkbox</type>
</CustomField>