unpackaged/main/default/objects/Trigger_Settings__c/fields/Receipt__c.field-meta.xml
<CustomField>
    <fullName>Receipt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Activate/Deactivate Receipt trigger logic (excluding managed package triggers)</description>
    <label>Receipt</label>
    <type>Checkbox</type>
</CustomField>