unpackaged/main/default/objects/Trigger_Settings__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Activate/Deactivate Sales Orders trigger logic (excluding managed package triggers)</description>
    <label>Sales Order</label>
    <type>Checkbox</type>
</CustomField>